Changed bitwise operator to logical operator

--- a/templates/word_game/Play_Game_R2_Old.html
+++ b/templates/word_game/Play_Game_R2_Old.html
@@ -2,16 +2,14 @@
 {% load otree %}
 
 {% block title %}
-    Round {{ player.round_number }} of {{ Constants.num_rounds }}: Level 2
+        Round {{ player.round_number }} of {{ Constants.num_rounds }}: Level 2
 {% endblock %}
 
-
 {% block content %}
-
     <div id="own_tiles_tuple" style="display: none;">{{ tile_value_tuple }}</div>
-    <div class="current_score" id="current_score"><h4> Current Score: {{ group.current_score }} points </h4></div>
-    <div class="cumulative_score" id="cumulative_score"><h4>Cumulative Score: {{ group.cumulative_score }} points</h4> 
-    </div>
+    <div class = "current_score" id="current_score"> <h4> Current Score: {{ group.current_score }} points </h4></div>
+    <div class = "cumulative_score" id="cumulative_score"> <h4>Cumulative Score: {{group.cumulative_score}} points</h4></div>
+
 
     <div class="pop-div">
         <!-- Button trigger modal -->
@@ -76,7 +74,7 @@
         </div>
         </div>
     </div>
-
+   
     <div class="container">
         <div class="row justify-content-center">
             <div class="input-group">
@@ -84,63 +82,61 @@
                 <div class="input-group-append">
                     <button id="submit_button" class="btn btn-primary" type="button">Submit Word</button>
                 </div>
-            </div>
+            </div>  
         </div>
     </div>
 
     <table id="history" class="display">
         <thead>
-        <th>Row_Number</th>
-        <th>Player</th>
-        <th>Word</th>
-        <th>Value</th>
-        <th>Message</th>
+            <th>Row_Number</th>
+            <th>Player</th>
+            <th>Word</th>
+            <th>Value</th>
+            <th>Message</th>
         </thead>
 
         <tbody>
-        {% for w in group.words.all %}
-            <tr>
+            {% for w in group.words.all %}
+            <tr>  
                 <td></td>
                 <td>{{ w.owner.id_in_group }}</td>
                 <td>{{ w.body }}</td>
                 <td>{{ w.value }}</td>
                 <td>{{ w.status }}</td>
             </tr>
-        {% endfor %}
+            {% endfor %}
         </tbody>
     </table>
 
     <div class="container">
         <div class="row justify-content-center">
             <div class="scrabble-container">
-                <div id="own_tiles" name= {{ own_tiles }}>{{ own_tiles }}</div>
+                <div id="own_tiles" name = {{own_tiles}}>{{ own_tiles }}</div>
             </div>
         </div>
-        <!--<div id="group_tiles">{{ group_tiles }}</div> -->
-        <div class="row justify-content-center">
-            <button id="shuffle_button" class="btn btn-success" type="button">Shuffle Letters</button>
-            <button id="early_leave_vote" class="btn btn-danger" type="button" data-toggle="confirmation"  >Vote to end round early</button>
+                <!--<div id="group_tiles">{{ group_tiles }}</div> -->
+        <div class = "row justify-content-center">
+                <button id = "shuffle_button" class="btn btn-success" type="button">Shuffle Letters</button>
+                <button id="early_leave_vote" class="btn btn-danger" type="button" data-toggle="confirmation">Vote to end round early</button>
+
         </div>
     </div>
 
-
+    
     {% chat %}
 
 {% endblock %}
 
 
 {% block scripts %}
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-confirmation2/4.1.0/bootstrap-confirmation.min.js"
-            integrity="sha512-C+jWZdPYFZh3Q8AmgZXnVQZwAv/NtX7IaE13v6ii3CjKRhtEYIwW3/tQlRmqAX4pwNp0xU/UZJBG1KvrrDpZ2A=="
-            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-confirmation2/4.1.0/bootstrap-confirmation.min.js"
+    integrity="sha512-C+jWZdPYFZh3Q8AmgZXnVQZwAv/NtX7IaE13v6ii3CjKRhtEYIwW3/tQlRmqAX4pwNp0xU/UZJBG1KvrrDpZ2A=="
+    crossorigin="anonymous"></script>
     <script type="text/javascript" charset="utf8"
-            src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
-
-
+    src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
 
     <script>
-        var wordhistory =  {{ group.history|json }};
-        const my_own_id_in_group = {{ player.id_in_group }};
+
         var history_data_table = $('#history').DataTable({
             "pageLength": 5,
             "searching": false,
@@ -150,15 +146,15 @@
             },
             "order": [[0, "desc"]],
             "columnDefs": [
-                {
-                    targets: [0],
-                    visible: false,
-                    searchable: false
-                }
+            {
+                targets: [0],
+                visible: false,
+                searchable: false
+            }
             ]
         });
 
-        console.log("Ready {{ view.round_number }}!");
+        console.log("Ready - R2!");
         const submitted_word = $('#submitted_word');
         const submit_button = $('#submit_button');
         const $group_tiles = $('#group_tiles');
@@ -180,27 +176,26 @@
             $early_vote_btn.prop('disabled', true);
         }
 
+
         // Style Scrabble Letters and Add Numerical Information
         transform_letters();
 
         // Applies CSS to letters to transform them into tiles
-        function get_tile_value(tile) {
-            var letter_values = {
-                "A": 1, "B": 3, "C": 3, "D": 2, "E": 1, "F": 4, "G": 2, "H": 4,
-                "I": 1, "J": 1, "K": 5, "L": 1, "M": 3, "N": 1, "O": 1, "P": 3, "Q": 10, "R": 1,
-                "S": 1, "T": 1, "U": 1, "V": 4, "W": 4, "X": 8, "Y": 4, "Z": 10
-            }
-            return (letter_values[tile])
+        function get_tile_value(tile){
+            var letter_values = {"A": 1, "B": 3, "C": 3, "D": 2, "E": 1, "F": 4, "G": 2, "H": 4, 
+            "I": 1, "J": 1, "K": 5, "L": 1, "M": 3, "N": 1, "O": 1, "P": 3, "Q": 10, "R": 1, 
+            "S": 1, "T": 1, "U": 1, "V": 4, "W": 4, "X": 8, "Y": 4, "Z": 10}
+            return(letter_values[tile])
         }
 
-        function transform_letters() {
-            var scrabble_transform = jQuery.map(($own_tiles.html() + '').split(''), function (letter) {
-                return '<span class="scrabble-tile__letter">' + letter +
+        function transform_letters(){
+            var scrabble_transform = jQuery.map(($own_tiles.html() + '').split(''), function(letter) {
+                return '<span class="scrabble-tile__letter">' + letter + 
                     '<span class="scrabble-tile__number">' + get_tile_value(letter) + '</span></span>'
             })
             //var scrabble_transform = [ ...$('#own_tiles_tuple').text().matchAll(/(\w)',\s+?'(\d)/g)].map(matches => `<span class="scrabble-tile__letter">${matches[1]}<span class="scrabble-tile__number">${matches[2]}</span></span>`);
             $own_tiles.html(scrabble_transform);
-            return (scrabble_transform)
+            return(scrabble_transform)
         }
 
         //<span class="scrabble-tile__number">1</span>
@@ -275,43 +270,37 @@
             }
         }
 
+
         //Attach listener to form to allow Enter Key to submit a word
         submitted_word.keypress(function (e) {
 
-            if (e.which == 13) {
-                console.log("Enter Key Pressed");
-                if (!wordhistory.includes($(this).val().toUpperCase())) {
-                    $('#submit_button').click();
-                    return false;
-                }
+        if (e.which == 13) {
+            console.log("Enter Key Pressed");
+            if (!wordhistory.includes($(this).val().toUpperCase())) {
+                $('#submit_button').click();
+                return false;
             }
+        }
 
         });
+
         submitted_word.on('change keydown keyup', function () {
-            if (wordhistory.includes($(this).val().toUpperCase())) {
-                submit_button.prop('disabled', true);
-            } else {
-                submit_button.prop('disabled', false);
-            }
+        if (wordhistory.includes($(this).val().toUpperCase())) {
+            submit_button.prop('disabled', true);
+        } else {
+            submit_button.prop('disabled', false);
+        }
 
         });
 
         //Add a shuffle button to randomize order of the string
-        $('#shuffle_button').click(function () {
-            //var scrabble_transform = [ ...$('#own_tiles_tuple').text().matchAll(/(\w)',\s+?'(\d)/g)].map(matches => `<span class="scrabble-tile__letter">${matches[1]}<span class="scrabble-tile__number">${matches[2]}</span></span>`);
-            //let shuffled = shuffle(scrabble_transform)
-            //$own_tiles.html(shuffled);
-
+        $('#shuffle_button').click(function() {
             let shuffled = shuffle($('#own_tiles').attr('name').split(''));
             $own_tiles.html(shuffled);
-            transform_letters();
+            transform_letters(); 
         });
 
-
-        /**
-         * Shuffles array in place.
-         * @param {Array} a items An array containing the items.
-         */
+        //Shuffles an array in place
         function shuffle(a) {
             var j, x, i;
             for (i = a.length - 1; i > 0; i--) {
@@ -323,61 +312,44 @@
             return a;
         }
 
-
-
         $('#myModal').on('shown.bs.modal', function () {
             $('#myInput').trigger('focus')
         })
 
-    </script>
-
-
-
-
-    <script>
-      $('[data-toggle=confirmation]').confirmation({
-            rootSelector: '[data-toggle=confirmation]',
-            onConfirm:()=>{liveSend({end_round: true})}
-        });
 
     </script>
-
 {% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css"> 
 
     <style>
-        .row {
-            margin-top: 15px;
+        .row{
+            margin-top: 15px;  
         }
 
         .display--inline-block {
             display: inline-block;
-            float: none;
-        }
+            float: none; }
 
-        .current_score {
-            position: absolute;
-            top: 10px;
+        .current_score{
+            position:absolute;
+            top:10px;
             right: 10px;
-            font-size: x-large;
-            font-weight: bold;
+            font-size: large;
+         }
 
-        }
-
-        .cumulative_score {
-            position: absolute;
-            top: 40px;
+         .cumulative_score{
+            position:absolute;
+            top:40px;
             right: 10px;
             font-size: x-large;
             font-style: italic;
 
-        }
-
+         }
         .pop-div {
-            position: absolute;
-            top: 10px;
+            position:absolute;
+            top:10px;
             left: 10px;
             font-size: large;
         }
@@ -387,15 +359,11 @@
         }
 
         .scrabble-container {
-            clear: both;
-        }
-
+        clear: both; }
         @media screen and (min-width: 1024px) {
             .scrabble-container {
-                margin-left: 15px;
-            }
-        }
-
+            margin-left: 15px; } }
+            
         .scrabble-container .scrabble-tile__space {
             width: 90px;
             height: 100px;
@@ -411,9 +379,7 @@
             vertical-align: bottom;
             cursor: default;
             text-transform: uppercase;
-            box-shadow: 3px 3px 4px rgba(107, 107, 107, 0.8), inset 3px 0 2px rgba(255, 255, 255, 0.4), inset 0 3px 0px rgba(255, 255, 255, 0.5), inset -2px -3px 0px rgba(143, 128, 82, 0.6);
-        }
-
+            box-shadow: 3px 3px 4px rgba(107, 107, 107, 0.8), inset 3px 0 2px rgba(255, 255, 255, 0.4), inset 0 3px 0px rgba(255, 255, 255, 0.5), inset -2px -3px 0px rgba(143, 128, 82, 0.6); }
         .scrabble-container .scrabble-tile__letter {
             background: #D5B292 url("../images/scrabble-tile-dark-bg.jpg") no-repeat scroll 0 0;
             border-radius: 4px;
@@ -431,89 +397,68 @@
             text-align: center;
             text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.9), 0 -1px 1px rgba(255, 255, 255, 0.2);
             text-transform: uppercase;
-            width: 35px;
-        }
-
-        @media screen and (min-width: 480px) {
+            width: 35px; }
+            @media screen and (min-width: 480px) {
             .scrabble-container .scrabble-tile__letter {
                 width: 31px;
                 height: 31px;
                 line-height: 25px;
-                font-size: 18px;
-            }
-        }
-
-        @media screen and (min-width: 640px) {
+                font-size: 18px; } }
+            @media screen and (min-width: 640px) {
             .scrabble-container .scrabble-tile__letter {
                 width: 40px;
                 height: 47px;
                 display: inline-block;
                 float: none;
                 font-size: 24px;
-                line-height: 47px;
-            }
-        }
-
-        @media screen and (min-width: 768px) {
+                line-height: 47px; } }
+            @media screen and (min-width: 768px) {
             .scrabble-container .scrabble-tile__letter {
                 width: 53px;
                 height: 58px;
                 font-size: 30px;
-                line-height: 58px;
-            }
-        }
+                line-height: 58px; } }
 
-        .scrabble-tile__number {
+            .scrabble-tile__number {
             font-size: 13px;
             position: relative;
             right: 0;
-            top: 5px;
-        }
-
-        @media screen and (min-width: 480px) {
-            .scrabble-tile__number {
-                font-size: 11px;
-            }
-        }
-
-        @media screen and (min-width: 768px) {
-            .scrabble-tile__number {
+            top: 5px; }
+            @media screen and (min-width: 480px) {
+                .scrabble-tile__number {
+                font-size: 11px; } }
+            @media screen and (min-width: 768px) {
+                .scrabble-tile__number {
                 font-size: 17px;
-                top: 8px;
-            }
-        }
+                top: 8px; } }
 
-        .scrabble-tile__rotate-nw {
-            transform: rotate(3deg);
-        }
+            .scrabble-tile__rotate-nw {
+            transform: rotate(3deg); }
 
-        .scrabble-tile__rotate-ne {
-            transform: rotate(-2deg);
-        }
+            .scrabble-tile__rotate-ne {
+            transform: rotate(-2deg); }
 
-        .scrabble-tile--end-letter {
-            margin-right: 20px !important;
-        }
+            .scrabble-tile--end-letter {
+            margin-right: 20px !important; }
 
-        .scrabble-tile--end-letter__mobile-only {
-            margin-right: 20px !important;
-        }
-
-        @media screen and (min-width: 768px) {
             .scrabble-tile--end-letter__mobile-only {
-                margin-right: 0 !important;
-            }
-        }
+            margin-right: 20px !important; }
+            @media screen and (min-width: 768px) {
+                .scrabble-tile--end-letter__mobile-only {
+                margin-right: 0 !important; } }
 
-        .scrabble-tile__new-word {
-            clear: both;
-        }
-
-        @media screen and (min-width: 480px) {
             .scrabble-tile__new-word {
-                clear: none;
+            clear: both; }
+            @media screen and (min-width: 480px) {
+                .scrabble-tile__new-word {
+                clear: none; } }
+
+            .center {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
             }
-        }
 
     </style>
 {% endblock %}
