--- a/templates/word_game/Play_Game_R3_Old.html
+++ b/templates/word_game/Play_Game_R3_Old.html
@@ -1,11 +1,15 @@
 {% extends 'global/Page.html' %}
 {% load otree %}
 
+
 {% block title %}
         Round {{ player.round_number }} of {{ Constants.num_rounds }}: Level 3
 {% endblock %}
 
 {% block content %}
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
 
     <div id="letter_color_tuple" style="display: none;">{{letter_color_tuple}}</div>
     <div id="own_tiles_colors" style="display: none;">{{own_tiles_colors}}</div>
@@ -13,13 +17,14 @@
     <div class = "current_score" id="current_score"> <h4> Current Score: {{ group.current_score }} points </h4></div>
     <div class = "cumulative_score" id="cumulative_score"> <h4>Cumulative Score: {{group.cumulative_score}} points</h4></div>
 
+
     <div class="pop-div">
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#instructionsModal">
             Instructions
         </button>
     </div>
-
+    <!-- Modal -->
     <div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-labelledby="instructionsModalLabel" aria-hidden="true">
         <div class="modal-dialog" style = "width:100%;max-width:900px " role="document">
             <div class="modal-content">
@@ -30,9 +35,8 @@
             </button>
             </div>
             <div class="modal-body">
-                <div class="alert alert-primary" role="alert">
-                    <b>Overview: As before, spell the highest-valued word that you can. But this time the tiles come in different colors, and you can’t have two tiles of the same color in a row. (If you don’t see colors well, you can use the tile shapes.)</b>
-                </div>
+                <p><br>Overview: As before, spell the highest-valued word that you can. But this time the tiles come in different colors, and you can’t have two tiles of the same color in a row. (If you don’t see colors well, you can use the tile shapes.)</br></p>
+
                 <li> 
                     In Stage 3, there are 16 rounds of 4 minutes and 45 seconds each. 
                 </li>
@@ -81,7 +85,8 @@
         </div>
         </div>
     </div>
-   
+
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="input-group">
@@ -124,8 +129,7 @@
                 <!--<div id="group_tiles">{{ group_tiles }}</div> -->
         <div class = "row justify-content-center">
                 <button id = "shuffle_button" class="btn btn-success" type="button">Shuffle Letters</button>
-                <button id="early_leave_vote" class="btn btn-danger" type="button" data-toggle="confirmation">Vote to end round early</button>
-
+                <input type="checkbox" class = "colorblind-toggle" id = "colorblind-toggle" checked data-toggle="toggle" data-on="Colorblind Mode Off" data-off="Colorblind Mode On" data-onstyle="success" data-offstyle="danger">
         </div>
     </div>
 
@@ -143,8 +147,7 @@
     src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
 
     <script>
-        var wordhistory =  {{ group.history|json }};
-        const my_own_id_in_group = {{ player.id_in_group }};
+
         var history_data_table = $('#history').DataTable({
             "pageLength": 5,
             "searching": false,
@@ -154,15 +157,15 @@
             },
             "order": [[0, "desc"]],
             "columnDefs": [
-                {
-                    targets: [0],
-                    visible: false,
-                    searchable: false
-                }
+            {
+                targets: [0],
+                visible: false,
+                searchable: false
+            }
             ]
         });
 
-        console.log("Ready {{ view.round_number }}!");
+        console.log("Ready - R3!");
         const submitted_word = $('#submitted_word');
         const submit_button = $('#submit_button');
         const $group_tiles = $('#group_tiles');
@@ -171,20 +174,9 @@
         const $history = $('#history');
         const $current_score = $('#current_score');
         const $cumulative_score = $('#cumulative_score');
-        const $early_vote_btn = $('#early_leave_vote');
-        const EARLYBTNTEXT = 'Vote to end round early'; //this is shown if noone else has voted yet
-        const VOTEDALREADYTEXT = 'Click to end round'; //this is shown if a partner has already voted to leave
-        const DISABLED_VOTING = "Please wait..."; // to show on the btn if a user has already voted;
-        const VOTEDALREADY = {{ group.early_leave_vote|json }};
-        const personally_voted = {% if  player.voted_to_leave_early %} true {% else %} false {% endif %};
 
-        let final_btn_text = VOTEDALREADY ? VOTEDALREADYTEXT : EARLYBTNTEXT;
-        final_btn_text = personally_voted ? DISABLED_VOTING : final_btn_text;
-        $early_vote_btn.html(final_btn_text);
-        if (personally_voted) {
-            $early_vote_btn.prop('disabled', true);
-        }
-
+        // Variable to toggle color-blind mode on or off
+        var colorblind_mode = 0;
 
         // Style Scrabble Letters and Add Numerical Information
         transform_letters();
@@ -211,12 +203,20 @@
             });
 
             var scrabble_transform = ""
-            
-            for (var i = 0; i < zipped.length; i++) {
-                scrabble_transform += '<span class="scrabble-tile__letter__' + zipped[i][1] + '">' + zipped[i][0] + 
-                    '<span class="scrabble-tile__number">' + get_tile_value(zipped[i][0]) + '</span></span>'
+
+            if(colorblind_mode == 0){ 
+                for (var i = 0; i < zipped.length; i++) {
+                    scrabble_transform += '<span class="scrabble-tile__letter__' + zipped[i][1] + '">' + zipped[i][0] + 
+                        '<span class="scrabble-tile__number">' + get_tile_value(zipped[i][0]) + '</span></span>'
+                }
             }
-            //console.log(scrabble_transform)
+
+            else{
+                for (var i = 0; i < zipped.length; i++) {
+                    scrabble_transform += '<span class="scrabble-tile__letter__' + zipped[i][1] + '_2">' + zipped[i][0] + 
+                        '<span class="scrabble-tile__number">' + get_tile_value(zipped[i][0]) + '</span></span>'
+                }
+            }
 
             //var scrabble_transform = jQuery.map(($own_tiles.html() + '').split(''), function(letter) {
             //    return '<span class="scrabble-tile__letter">' + letter + 
@@ -230,56 +230,22 @@
         submit_button.click(function () {
             if (submitted_word.val().trim() !== '') {
                 let payload = {word: submitted_word.val(),}
-                console.log(payload)
                 liveSend(payload);
                 $('#submitted_word').val("");
             }
-
-
         });
 
         function liveRecv(word_payload) {
-            const redirectUrl = "{{ view.redirect_url|safe }}";
-
-            const {message_type, message_value, who_voted, rechistory} = word_payload
-            switch (message_type) {
-                case 'error':
-                    alert(message_value)
-                    return;
-                case 'early_leave_vote':
-                    console.debug('got a message that a partner voted for leaving round')
-
-                    if (who_voted === my_own_id_in_group) {
-                        $early_vote_btn.html(DISABLED_VOTING);
-                        $early_vote_btn.prop('disabled', true);
-                    } else {
-                        $early_vote_btn.html(VOTEDALREADYTEXT);
-                    }
-
-                    return;
-                case 'early_leave_confirm':
-                    console.debug('got a confirmation that we are leaving round')
-
-                    window.location.href = redirectUrl;
-                    return
-                default:
-                    console.debug('new word received')
-            }
-
-            if (rechistory) {
-                wordhistory = rechistory
-            }
             let text = '<tr style="background-color: #ADD8E6"><td>' + word_payload.id_in_group + '</td><td>' + word_payload.word + '</td><td>' + word_payload.word_value + '</td><td>' + word_payload.message + '</td></tr>';
             //console.log($("#history").text);
             //console.log(word_payload.current_score);
-            $current_score.html("<h4>Current Score: " + word_payload.current_score + " points</h4>");
+            $current_score.html("<h4>Current Score: " + word_payload.current_score + " points</h4");
             $cumulative_score.html("<h4>Cumulative Score: " + word_payload.cumulative_score + " points</h4>");
-
 
             const how_many = history_data_table.rows().count();
             //t.row.add([how_many + 1, "whatever" + (how_many + 1).toString()]).draw(false);
 
-            history_data_table.row.add([how_many + 1,
+            history_data_table.row.add([how_many + 1, 
                 word_payload.id_in_group,
                 word_payload.word,
                 word_payload.word_value,
@@ -287,9 +253,11 @@
 
 
             //Equivalent to const own_tiles = word_payload.own_tiles
-            const {own_tiles, group_tiles} = word_payload;
+            const {own_tiles, group_tiles, tile_colors} = word_payload;
             if (own_tiles) {
                 $own_tiles.html(own_tiles);
+                $own_tiles_colors.html(tile_colors);
+
                 $own_tiles.attr('name', own_tiles);
                 transform_letters();
             }
@@ -299,36 +267,62 @@
             }
         }
 
-
         //Attach listener to form to allow Enter Key to submit a word
         submitted_word.keypress(function (e) {
             if (e.which == 13) {
                 console.log("Enter Key Pressed");
-                if (!wordhistory.includes($(this).val().toUpperCase())) {
-                    $('#submit_button').click();
+                $('#submit_button').click();
                     return false;
+            }
+
+        });
+ 
+        //Listens to the color-blind ctoggle
+        $(function() {
+            $('#colorblind-toggle').change(function() {
+                if(colorblind_mode == 1){
+                    colorblind_mode = 0;
                 }
-            }
-        });
+                else{
+                    colorblind_mode = 1;
+                }
+                console.log(colorblind_mode)
+                var color_list = $('#own_tiles_colors').text().split('');
+                var letter_list = $('#own_tiles').attr('name').split('');
+                transform_letters(letter_list, color_list);
 
-        // If an already submitted-word is in the input text, disable the submission prompt
-        submitted_word.on('change keydown keyup', function () {
-            if (wordhistory.includes($(this).val().toUpperCase()) || $(this).val().length > {% widthratio Constants.tile_size 1 2 %} ) {
-                submit_button.prop('disabled', true);
-            } else {
-                submit_button.prop('disabled', false);
-            }
+            })
+        })
 
-        });
-
-        // Add a shuffle button to randomize order of the string
+        //Add a shuffle button to randomize order of the string
         $('#shuffle_button').click(function() {
-            let shuffled = shuffle($('#own_tiles').attr('name').split(''));
-            $own_tiles.html(shuffled);
-            transform_letters(); 
+            var color_list = $('#own_tiles_colors').text().split('');
+            var letter_list = $('#own_tiles').attr('name').split('');
+
+            //One-liner range command
+            const range = (a,b)=>Array(Math.abs(a-b)+1).fill(a).map((v,i)=>v+i*(a>b?-1:1));
+
+            //Create index array ranges from 0 --> length of hand (6)
+            index_array = range(0, letter_list.length-1)
+            
+            //Shuffle the index array
+            index_array = shuffle(index_array);
+
+            var new_color_list = [];
+            var new_letter_list = [];
+
+            for(i = 0; i <= index_array.length-1; i++){
+                new_color_list[i] = color_list[index_array[i]];
+                new_letter_list[i] = letter_list[index_array[i]];
+            }
+
+            console.log(new_color_list)
+            console.log(new_letter_list)
+
+            transform_letters(new_letter_list, new_color_list);
         });
 
-        // Shuffles an array in place
+        // Psuedo-randomly shuffles an array in place
         function shuffle(a) {
             var j, x, i;
             for (i = a.length - 1; i > 0; i--) {
@@ -343,20 +337,12 @@
         $('#myModal').on('shown.bs.modal', function () {
             $('#myInput').trigger('focus')
         })
-
-        $('[data-toggle=confirmation]').confirmation({
-          rootSelector: '[data-toggle=confirmation]',
-          onConfirm:()=>{liveSend({end_round: true})}
-      });
-
     </script>
-
-
-
 {% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css"> 
+
 
     <style>
         .row{
@@ -382,6 +368,18 @@
             font-style: italic;
 
          }
+         #shuffle_button{
+             margin-right: 5px;
+         }
+
+         #colorblind-toggle {
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            width: 600px;
+         }
+     
+
         .pop-div {
             position:absolute;
             top:10px;
@@ -389,16 +387,12 @@
             font-size: large;
         }
 
-        #shuffle_button {
-            margin-right: 10px;
-        }
-
         .scrabble-container {
         clear: both; }
         @media screen and (min-width: 1024px) {
             .scrabble-container {
             margin-left: 15px; } }
-            
+        
         .scrabble-container .scrabble-tile__space {
             width: 90px;
             height: 100px;
@@ -448,9 +442,20 @@
             box-shadow: none;
         }
 
+        .scrabble-container .scrabble-tile__letter__R_2{
+            background: #FFB000 no-repeat scroll 0 0;
+            border-radius: 50%;
+            box-shadow: 3px 3px 4px  rgba(0,0,0,0.6);
+        }
 
         .scrabble-container .scrabble-tile__letter__G {
             background:#b2ebc0 no-repeat scroll 0 0;
+            box-shadow: none;
+            clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+        }
+
+        .scrabble-container .scrabble-tile__letter__G_2 {
+            background:#DC267F no-repeat scroll 0 0;
             box-shadow: none;
             clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
         }
@@ -465,6 +470,11 @@
             margin-right: 10px;
         }
 
+        .scrabble-container .scrabble-tile__letter__B_2 {
+            background: #648FFF no-repeat scroll 0 0;
+            box-shadow: none;
+
+            }
 
         @media screen and (min-width: 480px) {
         .scrabble-container .scrabble-tile__letter,
